--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,23 @@
 #release configuration
-#Wed Jun 03 15:34:33 GMT+01:00 2020
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-pushChanges=true
-scm.url=scm\:git\:ssh\://git@github.com/spring-projects/spring-boot.git/sfg-pet-clinic
-preparationGoals=clean verify
-projectVersionPolicyId=default
-remoteTagging=true
+#Thu Jun 04 14:06:33 GMT+01:00 2020
+project.rel.guru.springframework\:sfg-pet-clinic=0.0.1
 scm.commentPrefix=[maven-release-plugin] 
+project.dev.guru.springframework\:pet-clinic-data=0.0.2-SNAPSHOT
+pushChanges=false
+project.rel.guru.springframework\:pet-clinic-data=0.0.1
+project.scm.guru.springframework\:pet-clinic-web.empty=true
+project.dev.guru.springframework\:pet-clinic-web=0.0.2-SNAPSHOT
+scm.tag=sfg-pet-clinic-0.0.1
+project.rel.guru.springframework\:pet-clinic-web=0.0.1
+remoteTagging=true
+projectVersionPolicyId=default
+project.scm.guru.springframework\:pet-clinic-data.empty=true
+project.scm.guru.springframework\:sfg-pet-clinic.developerConnection=scm\:git\:git@github.com\:habibiayoub/sfg-pet-clinic.git
+scm.url=scm\:git\:ssh\://git@github.com/spring-projects/spring-boot.git/sfg-pet-clinic
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+preparationGoals=clean verify
+scm.username=habibiayoub
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+project.dev.guru.springframework\:sfg-pet-clinic=0.0.2-SNAPSHOT
+project.scm.guru.springframework\:sfg-pet-clinic.tag=HEAD
+completedPhase=end-release
