--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 					<goals>install</goals>
 					<localCheckout>true</localCheckout>
 					<pushChanges>false</pushChanges>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
 				</configuration>
 			</plugin>
 		</plugins>
