--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -72,7 +72,7 @@
 					<dependency>
 						<groupId>org.junit.platform</groupId>
 						<artifactId>junit-platform-surefire-provider</artifactId>
-						<version>{junit-platform-version}</version>
+						<version>3.0.0-M5</version>
 					</dependency>
 				</dependencies>
 			</plugin>
